[gd_scene load_steps=2 format=3 uid="uid://d9876543210ba"]

[ext_resource type="Script" path="res://ui/components/level_icon.gd" id="1"]

[node name="LevelIcon" type="Button"]
custom_minimum_size = Vector2(60, 60)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="LevelNumber" type="Label" parent="VBox"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="StarDisplay" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LockIcon" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ðŸ”’"
horizontal_alignment = 1
